
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int sqlite3_tokenizer ;
struct TYPE_2__ {int base; } ;
typedef TYPE_1__ porter_tokenizer ;


 int SQLITE_NOMEM ;
 int SQLITE_OK ;
 scalar_t__ calloc (int,int) ;

__attribute__((used)) static int porterCreate(
  int argc, const char * const *argv,
  sqlite3_tokenizer **ppTokenizer
){
  porter_tokenizer *t;
  t = (porter_tokenizer *) calloc(sizeof(*t), 1);
  if( t==((void*)0) ) return SQLITE_NOMEM;

  *ppTokenizer = &t->base;
  return SQLITE_OK;
}
